--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<body id="body">
     <header> 
         <h1>Carmen Robertson </h1>
         <nav id="linkbar">
@@ -19,12 +19,14 @@
         </nav>
     </header>
     <main>
-        <h1>About Me</h1>
+        <h2>About Me</h2>
         <section class="intro"> 
-            <img src="https://i.pravatar.cc/300" alt="placeholder"
+            <img src="https://i.pravatar.cc/150?img=23" alt="placeholder"
+        <section>
             <p>My name is Carmen Robertson. I graduated from Gonzaga with a BA in Psychology and a focus in Fine Arts. I am currently in the process of obtaining my Masters in Mass Communication and Web Design. This program is focused on communications predominantly in the digital realm. Upon completion I will be well versed in digital public relations, graphic design, and front end web development (coding, search engine optimization, etc). This program is asynchronous and completely remote therefore it does not impact my ability to work full time hours.
             </p>
-        </section class="skills">
+        </section>
+        <section class="skills">
         <h2>Professional Skillset</h2>
             <p>Thus far in my professional career I have developed many skills that make me an indispensable asset to any team. The first of these and arguably the most impactful is my ability to distill raw data into an actionable plan that optimizes business growth. As a research assistant for the University of Washington I developed a deep understanding and reverence for the importance of quality data, and the ability to turn that data into a plan of action. In a previous position I managed a project in which I was responsible for collecting hundreds of units of raw data, from that I had to then draw up an analysis determining financial impact. My presentation was utilized by the board as the quantitative backbone in support of their decision as to whether or not to move forward with a proposed partnership with one of the largest nonprofit healthcare providers in the region. Currently, I use organizational data collected by PowerBi and Medallia to inform and determine my daily action plan in order to promote personnel development, meet and exceed sales plans, and optimize client experience. 
             </p>
@@ -32,13 +34,14 @@
             </p>
             <p>Some of my other skills include but are not limited to: leadership, professional development, budget management, operational optimization, hiring, copywriting, graphic design, photography, public speaking, community engagement,visual merchandising, client retention, and new business development.
             </p>
-        <h2>Connect with Me</h2>
-        <section class="connect">
+        </section>  
+    </main>
+        <aside class="connect">   
+            <h2> Connect with Me </h2>
             <a href="#" class="fa fa-stack-overflow" id="stack"></a>
             <a href="#" class="fa fa-linkedin" id="linked"></a>
             <a href="#" class="fa fa-github" id="git"></a>
-        </section>
-    </main>
+        </aside>  
     <footer>
         &copy; Carmen Robertson Designs
     </footer>
