--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header> 
         <h1>Carmen Robertson </h1>
         <nav id="linkbar">
-            <a href="#" target="_blank">About</a>
-            <a href="#" target="_blank">Portfolio</a>
-            <a href="#" target="_blank">Contact</a>
+            <a href="#" target="_blank" class="about">About</a>
+            <a href="#" target="_blank"class="portfolio">Portfolio</a>
+            <a href="#" target="_blank" class="contact">Contact</a>
         </nav>
     </header>
     <main>
