--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
     <main>
         <h2>About Me</h2>
         <section class="intro"> 
-            <img src="https://i.pravatar.cc/150?img=23" alt="placeholder"
-        <section>
-            <p>My name is Carmen Robertson. I graduated from Gonzaga with a BA in Psychology and a focus in Fine Arts. I am currently in the process of obtaining my Masters in Mass Communication and Web Design. This program is focused on communications predominantly in the digital realm. Upon completion I will be well versed in digital public relations, graphic design, and front end web development (coding, search engine optimization, etc). This program is asynchronous and completely remote therefore it does not impact my ability to work full time hours.
+            <img src="https://i.pravatar.cc/150?img=23" alt="placeholder" >
+            <p> My name is Carmen Robertson. I graduated from Gonzaga with a BA in Psychology and a focus in Fine Arts. I am currently in the process of obtaining my Masters in Mass Communication and Web Design. This program is focused on communications predominantly in the digital realm. Upon completion I will be well versed in digital public relations, graphic design, and front end web development (coding, search engine optimization, etc). This program is asynchronous and completely remote therefore it does not impact my ability to work full time hours.
             </p>
         </section>
         <section class="skills">
